Commented out experience section and modified social icons

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -23,7 +23,7 @@ div.social-icons span.icon {
     padding:1em;
     margin-right: 0.5em;
     border-radius: 60px; 
-    border: 2px solid #fff;
+    border: 2px solid rgba(10, 10, 10, 0.1);
 }
 
 i.fa {
